--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-<body>
-    <h1>Welcome to the Login Page</h1>
-    <p>The email you entered before is: <span id="userEmail"></span></p>
+{% extends "layout.html" %}
+{% block body %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-5 mx-md-auto pt-5">
+            <h1>Login</h1>
+            <form method="POST" action="{{ url_for('login', next=request.args.get('next')) }}">
+                <div class="form-group">
+                    <label for="email">Email address</label>
+                    <input type="email" class="form-control" name="email" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <label for="pass">Password</label>
+                    <input type="password" class="form-control" name="pass" placeholder="Password">
+                </div>
+                <div class="form-group mt-5">
+                    <input type="hidden" id="csrf_token" name="csrf_token" value="{{ csrf_token() }}">
+                    <input type="submit" value="Login" class="btn btn-primary btn-block">
+                </div>
+            </form>
 
-    <script>
-        // Check if email exists in local storage
-        var storedEmail = localStorage.getItem('email');
+            {% if error == "1" %}
+            <p class="text-danger">Incorrect email address or password.<br />Please try again.</p>
+            {% endif %}
 
-        // Display the stored email in the page
-        if (storedEmail) {
-            document.getElementById('userEmail').textContent = storedEmail;
-        }
-    </script>
-</body>
-</html>
+            {% if current_user.is_authenticated %}
+            <div class="form-group">
+                <a class="btn btn-danger" href="{{ url_for('logout') }}">Logout</a>
+            </div>
+            {% else %}
+            <div class="mt-3">
+                <p>Dont have an account? <a href="{{ url_for('register') }}">Sign up here</a></p>
+            </div>
+            {% endif %}
+
+        </div>
+    </div>
+</div>
+{% endblock %}
